applications/step-ca/controlplane/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: step-ca
  namespace: step-ca
spec:
  gatewayClassName: merged-eg
  listeners:
    - name: https-passthrough
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-crl
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
