applications/step-ca/controlplane/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: step-ca-crl
  namespace: step-ca
spec:
  parentRefs:
    - name: step-ca
      namespace: step-ca
      sectionName: http-crl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /1.0/crl
      backendRefs:
        - name: step-certificates
          port: 9001
